@@ -1,3 +1,8 @@
+2013-07-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/oval_plugins.c: Replaced any occurance of post_note by post_error
+	or post_alarm respectively.
+
 2013-07-01  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* src/attack.c (pattern_matches, fill_host_kb_ssh_credentials): Hide
